gcc/testsuite/rust.test/fail_compilation/tuple1.rs
fn main() {
    let a: (i32, bool) = (123, 123);
    let b;
    b = (456, 5f32);
}
